Bug 464519 - Close button on "Finished" message does not close the message
Summary: Close button on "Finished" message does not close the message
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_fontinst (other bugs)
Version First Reported In: master
Platform: Neon Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-19 19:29 UTC by Paul Worrall
Modified: 2023-01-28 21:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2023-01-19 19:29:42 UTC
STEPS TO REPRODUCE
1. Launch the KCM and select "Install from File..."
2. Navigate to and select a .ttf file
3. Choose "Personal"
4. Click the "Close" button on "Finished" message box

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
Message box closes

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Graphics Platform: X11
Comment 1 Nate Graham 2023-01-23 21:42:36 UTC
Hmm, I just tried this (Wayland, Fedora 37, git master stuff) and the font was installed successfully without any king of "finished" message box.
Comment 2 Paul Worrall 2023-01-24 08:20:43 UTC
The "Finished" message may have been disabled - it has a "Don't tell me in future" tick box
Comment 3 Nate Graham 2023-01-24 16:22:25 UTC
Right you are. Can confirm now.
Comment 4 ratijas 2023-01-27 22:11:44 UTC
Git commit 90e59648610397ac611c906bbdefc7f4a6906017 by ivan tkachenko, on behalf of Nate Graham.
Committed on 27/01/2023 at 22:00.
Pushed by ngraham into branch 'master'.

kcms/kfontinst: close "Finished" dialog box when clicking OK

The code handling when the "OK" button got clicked was not actually
closing the dialog box, so clicking on it did nothing.
FIXED-IN: 5.27

M  +1    -0    kcms/kfontinst/kcmfontinst/JobRunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/90e59648610397ac611c906bbdefc7f4a6906017
Comment 5 Nate Graham 2023-01-27 22:12:14 UTC
Git commit 0aa62e1c693024bca3cd234682a4523a0372cf41 by Nate Graham.
Committed on 27/01/2023 at 22:12.
Pushed by ngraham into branch 'cherry-pick-90e59648'.

kcms/kfontinst: close "Finished" dialog box when clicking OK

The code handling when the "OK" button got clicked was not actually
closing the dialog box, so clicking on it did nothing.
FIXED-IN: 5.27


(cherry picked from commit 90e59648610397ac611c906bbdefc7f4a6906017)

M  +1    -0    kcms/kfontinst/kcmfontinst/JobRunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/0aa62e1c693024bca3cd234682a4523a0372cf41
Comment 6 Nate Graham 2023-01-28 21:11:50 UTC
Git commit d4dac2915c73e8f1f41571c9d1bec26871082a3e by Nate Graham.
Committed on 28/01/2023 at 21:11.
Pushed by ngraham into branch 'Plasma/5.27'.

kcms/kfontinst: close "Finished" dialog box when clicking OK

The code handling when the "OK" button got clicked was not actually
closing the dialog box, so clicking on it did nothing.
FIXED-IN: 5.27
(cherry picked from commit 90e59648610397ac611c906bbdefc7f4a6906017)

M  +1    -0    kcms/kfontinst/kcmfontinst/JobRunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/d4dac2915c73e8f1f41571c9d1bec26871082a3e