kcms/kfontinst: close "Finished" dialog box when clicking OK

The code handling when the "OK" button got clicked was not actually
closing the dialog box, so clicking on it did nothing.

BUG: 464519
FIXED-IN: 5.27
(cherry picked from commit 90e59648610397ac611c906bbdefc7f4a6906017)